<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.wy.daylife.activity.MainActivity">

    <include layout="@layout/toolbar" />

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/main_draw"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/main_fragment_container"></FrameLayout>

            <RadioGroup
                android:id="@+id/main_fragment_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/whitesmoke"
                android:paddingBottom="0dp">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/home_drawable"
                    android:text="@string/main_home"
                    android:id="@+id/main_home"
                    android:layout_gravity="bottom"
                    android:button="@null"
                    android:checked="true"
                    android:paddingBottom="0dp"
                    android:gravity="center_horizontal|bottom"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/notification_drawable"
                    android:text="@string/main_notify"
                    android:id="@+id/main_notify"
                    android:layout_gravity="bottom"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="0dp"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/search_drawable"
                    android:text="@string/main_search"
                    android:id="@+id/main_search"
                    android:layout_gravity="bottom"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="0dp"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/person_drawable"
                    android:text="@string/main_person"
                    android:id="@+id/main_person"
                    android:layout_gravity="bottom"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center_horizontal|bottom"
                    android:paddingBottom="0dp"/>

            </RadioGroup>

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/main_background"
                    android:id="@+id/main_ll">

                    <com.example.wy.daylife.costumview.CircleImageView
                        android:id="@+id/main_face"
                        android:layout_width="@dimen/main_face"
                        android:layout_height="@dimen/main_face"
                        android:layout_marginBottom="@dimen/night_mode_size"
                        android:src="@drawable/main_face"
                        android:layout_marginLeft="@dimen/night_mode_size"
                        android:layout_marginTop="@dimen/night_mode_size"/>

                    <TextView
                        android:id="@+id/main_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/main_textSize"
                        android:textColor="@color/white"
                        android:text="韦镒_77"
                        android:layout_below="@id/main_face"
                        android:layout_marginLeft="@dimen/night_mode_size"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignBottom="@id/main_name"
                        android:id="@+id/main_id_manager"
                        android:background="@android:drawable/arrow_up_float"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

                </RelativeLayout>

                <TextView
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_below="@id/main_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_group"
                    android:textSize="@dimen/activity_vertical_margin"
                    android:textColor="@color/black"
                    android:layout_alignParentLeft="true"
                    android:text="@string/main_group"
                    android:layout_marginLeft="@dimen/night_mode_size"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignBottom="@id/main_group"
                    android:id="@+id/main_group_img"
                    android:background="@drawable/ic_group_grey_500_24dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>

                <ListView
                    android:id="@+id/main_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_group"
                    android:divider="#00000000"
                    android:layout_marginTop="@dimen/activity_vertical_margin"></ListView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black"
                    android:layout_below="@id/main_listview"
                    android:id="@+id/main_line"
                    android:layout_marginTop="@dimen/main_line_margin"></View>

                <ImageView
                    android:id="@+id/main_nightmode_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_line"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@drawable/ic_settings_power_grey_500_24dp"
                    android:layout_marginRight="@dimen/main_long"
                    android:layout_marginLeft="@dimen/night_mode_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_nightmode_text"
                    android:layout_alignBottom="@id/main_nightmode_img"
                    android:layout_toRightOf="@id/main_nightmode_img"
                    android:text="@string/night_mode"
                    android:textColor="@color/black"
                    android:textSize="@dimen/activity_vertical_margin"/>

                <ImageView
                    android:id="@+id/main_settings_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_nightmode_img"
                    android:layout_marginTop="@dimen/night_mode_size"
                    android:background="@drawable/ic_settings_grey_500_24dp"
                    android:layout_marginRight="@dimen/main_long"
                    android:layout_marginLeft="@dimen/night_mode_size"
                    android:layout_marginBottom="@dimen/night_mode_size"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_settings_text"
                    android:layout_alignBottom="@id/main_settings_img"
                    android:layout_toRightOf="@id/main_settings_img"
                    android:text="@string/main_settings"
                    android:textColor="@color/black"
                    android:textSize="@dimen/activity_vertical_margin"/>

            </RelativeLayout>
        </ScrollView>

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>
